Fix Bro_Filebeat_Logstash.conf 分隔符Tab问题

--- a/Bro_Filebeat_conf/Bro_Filebeat_Logstash.conf
+++ b/Bro_Filebeat_conf/Bro_Filebeat_Logstash.conf
@@ -42,8 +42,8 @@ filter {
 ###############################################################################################
 
   if [type] == "bro-dns" {
-	csv {    
-            columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","proto","trans_id","rtt","query","qclass","qclass_name","qtype","qtype_name","rcode","rcode_name","AA","TC","RD","RA","Z","answers","TTLs","rejected"]
+    csv {    
+      columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","proto","trans_id","rtt","query","qclass","qclass_name","qtype","qtype_name","rcode","rcode_name","AA","TC","RD","RA","Z","answers","TTLs","rejected"]
       separator => "	"
     }
 
@@ -71,7 +71,7 @@ filter {
   if [type] == "bro-files" {
     csv {
       columns => ["ts","fuid","tx_hosts","rx_hosts","conn_uids","source","depth","analyzers","mime_type","filename","duration","local_orig","is_orig","seen_bytes","total_bytes","missing_bytes","overflow_bytes","timedout","parent_fuid","md5","sha1","sha256","extracted"]
-      separator => "    "
+      separator => "	"
     }
 
     date {
@@ -102,9 +102,9 @@ filter {
 
   if [type] == "bro-http" {
     csv {
-            columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","trans_depth","method","host","uri","referrer","user_agent","request_body_len","response_body_len","status_code","status_msg","info_code","info_msg","filename","tags","username","password","proxied","orig_fuids","orig_mime_types","resp_fuids","resp_mime_types"]
+      columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","trans_depth","method","host","uri","referrer","user_agent","request_body_len","response_body_len","status_code","status_msg","info_code","info_msg","filename","tags","username","password","proxied","orig_fuids","orig_mime_types","resp_fuids","resp_mime_types"]
 
-      separator => "    "
+      separator => "	"
     }
 
     date {
@@ -137,7 +137,7 @@ filter {
     csv {
       columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","fuid","file_mime_type","file_desc","proto","note","msg","sub","src","dst","p","n","peer_descr","actions","suppress_for","dropped","remote_location.country_code","remote_location.region","remote_location.city","remote_location.latitude","remote_location.longitude"]
 
-      separator => "    "
+      separator => "	"
     }
 
     date {
@@ -168,7 +168,7 @@ filter {
     csv {
       columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","status","direction","client","server","remote_location.country_code","remote_location.region","remote_location.city","remote_location.latitude","remote_location.longitude"]
 
-      separator => "    "
+      separator => "	"
     }
 
     date {
@@ -194,9 +194,9 @@ filter {
 
   if [type] == "bro-ssl" {
     csv {
-      columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","version","cipher","curve","server_name","session_id","last_alert","established","cert_chain_fuids","client_cert_chain_fuids","subject","issuer","client_subject","client_issuer","validation_status"]
+      columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","version","cipher","curve","server_name","resumed","last_alert","next_protocol","established","cert_chain_fuids","client_cert_chain_fuids","subject","issuer","client_subject","client_issuer","validation_status"]
 
-      separator => "    "
+      separator => "	"
     }
 
     date {
@@ -224,7 +224,7 @@ filter {
     csv {
       columns => ["ts","uid","id.orig_h","id.orig_p","id.resp_h","id.resp_p","name","addl","notice","peer"]
 
-      separator => "    "
+      separator => "	"
     }
 
     date {
@@ -252,7 +252,7 @@ filter {
     csv {
       columns => ["ts","id","certificate.version","certificate.serial","certificate.subject","icertificate.issuer","certificate.not_valid_before","certificate.not_valid_after","certificate.key_alg","certificate.sig_alg","certificate.key_type","certificate.key_length","certificate.exponent","certificate.curve","san.dns","san.uri","san.email","san.ip","basic_constraints.ca","basic_constraints.path_len"]
 
-      separator => "    "
+      separator => "	"
     }
 
     date {
